# ack-ack

./: .gitignore  README.md  ack-ack.code-workspace
ack-ack-arduino/: ack-ack-arduino.ino
doc/: planning.md
hw/: AA_P1.kicad_prl  AA_P1.kicad_pro  AA_P1.kicad_sch  AA_P_CtrlBd.kicad_pcb  AA_P_CtrlBd.kicad_prl  AA_P_CtrlBd.kicad_pro  AA_P_CtrlBd.kicad_sch
hw/bom/: AA_P_CtrlBd-1.0-ibom.html
hw/dxf/: Rear-Bogie-Arm-SCS.dxf
hw/gerber/: AA_P_CtrlBd-B_Cu.gbr  AA_P_CtrlBd-B_Mask.gbr  AA_P_CtrlBd-B_Paste.gbr  AA_P_CtrlBd-B_Silkscreen.gbr  AA_P_CtrlBd-Edge_Cuts.gbr  AA_P_CtrlBd-F_Cu.gbr  AA_P_CtrlBd-F_Mask.gbr  AA_P_CtrlBd-F_Paste.gbr  AA_P_CtrlBd-F_Silkscreen.gbr  AA_P_CtrlBd-In1_Cu.gbr  AA_P_CtrlBd-In2_Cu.gbr  AA_P_CtrlBd-NPTH-drl.gbr  AA_P_CtrlBd-PTH-drl.gbr
pico/ctrl/: LICENSE-3rdParty.md  README.md  ctrl.code-workspace
pico/ctrl/src/: CMakeLists.txt  board.c  board.h  debug_support.c  debug_support.h  main.c  multicore.c  multicore.h  p2bugs.c  rover_info.h  spi_ops.c  spi_ops.h  system_defs.h  tests.c  tests.h  try_throw_catch.h
pico/ctrl/src/cmt/: CMakeLists.txt  cmt.c  cmt.h  cmt_mh.h  cmt_t.h  core1_main.c  core1_main.h  multicore.c  multicore.h
pico/ctrl/src/curswitch/: curswitch.c  curswitch.h  curswitch_t.h
pico/ctrl/src/dcs/: CMakeLists.txt  core1_main.c  core1_main.h  dcs.c  dcs.h
pico/ctrl/src/display/: CMakeLists.txt  display.c  display.h  display_i.h
pico/ctrl/src/display/display_rgb18/: CMakeLists.txt  display_rgb18.c  display_rgb18.h  ili_lcd_spi.c  ili_lcd_spi.h
pico/ctrl/src/display/display_rgb18/ili9341_spi/: CMakeLists.txt  ili9341_spi.c  ili9341_spi.h
pico/ctrl/src/display/display_rgb18/ili9488_spi/: CMakeLists.txt  ili9488_spi.c  ili9488_spi.h
pico/ctrl/src/display/fonts/: CMakeLists.txt  font.h  font_10_16.c  font_10_16.h
pico/ctrl/src/expio/: CMakeLists.txt  expio.c  expio.h
pico/ctrl/src/gfx/: gfx.c  gfx.h
pico/ctrl/src/hid/: CMakeLists.txt  README.md  hid.c  hid.h
pico/ctrl/src/hwos/: CMakeLists.txt  hwos.c  hwos.h
pico/ctrl/src/hwrt/: CMakeLists.txt  hwrt.c
pico/ctrl/src/lib/: CMakeLists.txt
pico/ctrl/src/lib/json-maker/: CMakeLists.txt
pico/ctrl/src/lib/tiny-json/: CMakeLists.txt
pico/ctrl/src/neopix/: CMakeLists.txt  neopix.c  neopix.h  ws2312.c  ws2812.pio
pico/ctrl/src/pio_uart/: CMakeLists.txt  pio_uart.c  pio_uart.h  uart.pio
pico/ctrl/src/rcrx/: CMakeLists.txt  README.md  SBUS.md  SRXL2.md  piosm.h  rcrx.c  rcrx.h  rcrx_t.h  rx_sbus.c  rx_sbus.h  rx_sbus.pio  serial_rd.c  serial_rd.h  serial_rd.pio
pico/ctrl/src/rotary_encoder/: CMakeLists.txt  re_pbsw.c  re_pbsw.h  rotary_encoder.c  rotary_encoder.h
pico/ctrl/src/rover/: CMakeLists.txt  rover.c  rover.h
pico/ctrl/src/sensbank/: CMakeLists.txt  README.md  sensbank.c  sensbank.h  sensbank.pio  sensbank_t.h
pico/ctrl/src/servo/: CMakeLists.txt  _temp_sc.c  servo.c  servo.h  servo_mh.h  servo_t.h  servos.c  servos.h
pico/ctrl/src/term/: CMakeLists.txt  term.c  term.h  term_ctrlchrs.h  term_mh.h  tkbd.c  tkbd.h
pico/ctrl/src/touch_panel/: CMakeLists.txt  touch.c  touch.h
pico/ctrl/src/util/: util.c  util.h
pico/leg/src/: CMakeLists.txt  board.c  board.h  debug_support.c  debug_support.h  main.c  system_defs.h
pico/leg/src/cg/: CMakeLists.txt  cg.c  cg.h
pico/leg/src/cmt/: CMakeLists.txt  cmt.c  cmt.h  multicore.c  multicore.h
pico/leg/src/config/: CMakeLists.txt  config.c  config.h  config_hndlr.c  config_hndlr.h
pico/leg/src/display/: CMakeLists.txt  display.h
pico/leg/src/display/fonts/: font_9_10_h.c  font_9_10_h.h
pico/leg/src/display/oled1106_spi/: CMakeLists.txt  display_oled1106.c  display_spi_ops.c  display_spi_ops.h  oled1106_spi.c  oled1106_spi.h
pico/leg/src/display/oled1306_i2c/: display_oled1306.c  oled1306_i2c.c  oled1306_i2c.h
pico/leg/src/fl/: CMakeLists.txt  core1_main.c  core1_main.h  fl.c  fl.h  fl_disp.c  fl_disp.h
pico/leg/src/lib/: CMakeLists.txt
pico/leg/src/lib/ws28xx_neopix/: CMakeLists.txt  ws28xx.c
pico/leg/src/os/: CMakeLists.txt  os.c  os.h
pico/leg/src/pwrmon/: CMakeLists.txt  pwrmon_3221.c  pwrmon_3221.h
pico/leg/src/servo/: CMakeLists.txt  pwm.pio  pwm_rcv.pio  receiver.c  receiver.h  servo.c  servo.h
pico/leg/src/test/: CMakeLists.txt  test.c  test.h
pico/leg/src/util/: util.c  util.h
rpi/: ros2_install.md
src-py/: sin_cos_tab_tgen.py
